--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="largePadding">16dp</dimen>
     <dimen name="largeMargin">16dp</dimen>
     <dimen name="smallMargin">8dp</dimen>
+    <dimen name="smallPadding">8dp</dimen>
 </resources>
