--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,21 @@
     </style>
 
 
+
+        <style name="customCardView" parent="@style/Widget.MaterialComponents.CardView">
+            <item name="shapeAppearanceOverlay">@style/CustomShapeAppearanceOverlay</item>
+        </style>
+
+
+        <style name="CustomShapeAppearanceOverlay" parent="">
+            <item name="cornerFamily">rounded</item>
+            <item name="cornerSizeTopRight">0dp</item>
+            <item name="cornerSizeTopLeft">0dp</item>
+            <item name="cornerSizeBottomRight">16dp</item>
+            <item name="cornerSizeBottomLeft">16dp</item>
+        </style>
+
+
 <!--    <style name="CategoryStyles">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
