--- a/app/src/main/res/layout/container_categories.xml
+++ b/app/src/main/res/layout/container_categories.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cardView"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardElevation="10dp"
     app:cardCornerRadius="10dp"
-    android:layout_margin="20dp"
+    android:layout_margin="10dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
-        android:background="@android:color/holo_orange_light"
+        android:padding="8dp"
+        android:background="#4B61B5"
         >
 
         <ImageView
@@ -24,7 +25,7 @@
             android:layout_marginRight="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/ic_icon"
             />
 
         <com.google.android.material.textview.MaterialTextView
@@ -32,7 +33,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Travel"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/fugaz_one"
+            android:textSize="20sp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="80dp"
             app:layout_constraintTop_toBottomOf="@id/iv_categoryImage"
