--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -7,17 +7,18 @@
 
     </data>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_margin="8dp"
         app:cardElevation="10dp"
-        app:cardCornerRadius="10dp">
+        android:clickable="true"
+        app:cardCornerRadius="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/holo_red_light"
+            android:background="#3459E6"
             android:padding="@dimen/largePadding">
 
             <androidx.constraintlayout.widget.Guideline
@@ -29,9 +30,9 @@
 
             <ImageView
                 android:id="@+id/bucketsImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_launcher_background"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/ic_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -40,32 +41,34 @@
                 android:id="@+id/bucketNameTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/baloo"
+                android:textStyle="bold"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toEndOf="@id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/bucketsImageView"
-                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Finish the 30 Days of kotlin" />
 
             <TextView
                 android:id="@+id/thoughtsTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/smallMargin"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/baloo"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toEndOf="@id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/bucketNameTextView"
-                android:textStyle="italic"
                 tools:text="I just really wanna finish this in around 30 days" />
 
             <TextView
                 android:id="@+id/categoryTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/smallMargin"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/baloo"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toEndOf="@id/guideline"
@@ -74,7 +77,22 @@
                 android:textStyle="bold|italic"
                 tools:text="Travel" />
 
+            <TextView
+                android:id="@+id/dateTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/baloo"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                android:textColor="@android:color/white"
+                app:layout_constraintStart_toEndOf="@id/guideline"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/categoryTextView"
+                android:textStyle="bold"
+                tools:text="29/05/2020" />
+<!--            android:textColor="@color/colorPrimaryDark"-->
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 </layout>
