--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -18,7 +18,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#3459E6"
+            android:background="@color/cardColor"
             android:padding="@dimen/largePadding">
 
             <androidx.constraintlayout.widget.Guideline
