--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="textViewTextSize">30sp</dimen>
+    <dimen name="textViewTextSize">21sp</dimen>
+    <dimen name="EditTextSize">19sp</dimen>
     <dimen name="largePadding">16dp</dimen>
     <dimen name="largeMargin">16dp</dimen>
     <dimen name="smallMargin">8dp</dimen>
